--- a/retailer.html
+++ b/retailer.html
@@ -257,44 +257,38 @@ async function directBuy(){
       amount: data.amount,
       currency: "INR",
       order_id: data.order.id,
-      notes: {
-  wholesalerId: selectedProduct.wholesalerId,
-  wholesalerName: selectedProduct.shopName,
-  wholesalerMobile: selectedProduct.mobile,
-  wholesalerAddress: selectedProduct.address,
 
-  productId: selectedProduct._id,
-  productName: selectedProduct.productName,
-  productImg: selectedProduct.image,
-  description: selectedProduct.detail,
-  price: selectedProduct.price,
+      // 🔴 VERY IMPORTANT — WEBHOOK DATA
+      notes:{
+        wholesalerId: selectedProduct.wholesalerId,
+        wholesalerName: selectedProduct.shopName,
+        wholesalerMobile: selectedProduct.mobile,
+        wholesalerAddress: selectedProduct.address,
 
-  retailerName: profile.name,
-  retailerMobile: profile.mobile,
-  retailerAddress: profile.address,
+        productId: selectedProduct._id,
+        productName: selectedProduct.productName,
+        productImg: selectedProduct.image,
+        description: selectedProduct.detail,
+        price: selectedProduct.price,
 
-  vehicleType: v,
-  deliveryCharge: dc
-      }
+        retailerName: profile.name,
+        retailerMobile: profile.mobile,
+        retailerAddress: profile.address,
+
+        vehicleType: v,
+        deliveryCharge: dc
+      },
+
       handler: function (resp) {
 
-  alert(
-    "✅ Payment Successful 🎉\n\n" +
-    "Payment ID: " + resp.razorpay_payment_id + "\n\n" +
-    "Order processing me hai.\n" +
-    "Delivery details thodi der me show honge 🚚"
-       );
+        alert(
+          "✅ Payment Successful 🎉\n\n" +
+          "Payment ID: " + resp.razorpay_payment_id + "\n\n" +
+          "Order processing me hai 🚚\n" +
+          "Delivery details thodi der me show honge"
+        );
 
         closeAll();
-        }
-          }else{
-            alert("⚠️ Payment received but order not created");
-          }
-
-        }catch(err){
-          console.error("CONFIRM ERROR:", err);
-          alert("⚠️ Payment success but server not responding");
-        }
       },
 
       modal:{
@@ -304,13 +298,13 @@ async function directBuy(){
       }
     });
 
-    rzp.open(); // 🚀 OPEN PAYMENT WINDOW
+    rzp.open(); // 🔥 MOST IMPORTANT
 
   }catch(err){
     console.error("PAY ERROR:", err);
     alert("❌ Payment process failed");
   }
-} 
+}
 // ------------------- CART -------------------
 async function addToCart(p){
 
