Change button to use type attribute

--- a/retailer.html
+++ b/retailer.html
@@ -83,7 +83,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     </select>
     <p id="dDelivery"></p>
     <p id="dTotal"></p>
-    <button class="primary" onclick="directBuy()">⚡ Buy Now</button>
+    <button type="button" class="primary" onclick="directBuy()">⚡ Buy Now</button>
     <button onclick="closeAll()">Close</button>
   </div>
 </div>
