--- a/retailer.html
+++ b/retailer.html
@@ -84,7 +84,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     <p id="dDelivery"></p>
     <p id="dTotal"></p>
     <button type="button" class="primary" onclick="directBuy()">⚡ Buy Now</button>
-    <button onclick="closeAll()">Close</button>
+<button type="button" onclick="closeAll()">Close</button>
   </div>
 </div>
 
