--- a/retailer.html
+++ b/retailer.html
@@ -218,80 +218,59 @@ function openDetail(p){
 }
 
 async function directBuy(e) {
-  e.preventDefault?.(); // agar form ke andar hai to prevent default
+  e.preventDefault();
 
-  const v = vehicleType.value;
-  if (!v) {
-    alert("🚚 Please select vehicle");
+  const total = selectedProduct.price + deliveryChargeByVehicle(vehicleType.value);
+
+  const res = await fetch(`${API}/api/orders/pay-and-create`, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      amount: total,
+
+      // 🔥 NOTES (WEBHOOK ke liye)
+      notes: {
+        productId: selectedProduct._id,
+        productName: selectedProduct.productName,
+        price: selectedProduct.price,
+
+        wholesalerId: selectedProduct.wholesalerId,
+        wholesalerName: selectedProduct.shopName,
+        wholesalerMobile: selectedProduct.mobile,
+        wholesalerAddress: selectedProduct.address,
+
+        retailerName: retailerProfile.name,
+        retailerMobile: retailerProfile.mobile,
+        retailerAddress: retailerProfile.address,
+
+        vehicleType: vehicleType.value,
+        deliveryCharge: deliveryChargeByVehicle(vehicleType.value)
+      }
+    })
+  });
+
+  const data = await res.json();
+  if (!data.success) {
+    alert("❌ Order create failed");
     return;
   }
 
-  const profile = JSON.parse(localStorage.getItem("retailerProfile") || "{}");
-  if (!profile.mobile) {
-    alert("👤 Please save profile first");
-    return;
-  }
+  const rzp = new Razorpay({
+    key: data.key,
+    amount: data.amount,
+    currency: "INR",
+    order_id: data.order.id,
 
-  const dc = deliveryChargeByVehicle(v);
-  const total = selectedProduct.price + dc;
-
-  dDelivery.innerText = "Delivery ₹" + dc;
-  dTotal.innerText = "Total ₹" + total;
-
-  try {
-    const res = await fetch(`${API}/api/orders/pay-and-create`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ amount: total })
-    });
-
-    const data = await res.json();
-
-    if (!data.success || !data.order?.id) {
-      console.error("Order creation failed:", data);
-      alert("❌ Payment initialization failed");
-      return;
+    handler: function (resp) {
+      alert("✅ Payment Successful 🎉");
+      alert("📦 Order processing…");
+      // ❌ no reload
+      // optional redirect
+      // window.location.href = "/orders.html";
     }
+  });
 
-    console.log("Razorpay order created:", data.order.id);
-
-    const rzp = new Razorpay({
-  key: data.key,
-  amount: data.amount,
-  currency: "INR",
-  order_id: data.order.id,
-
-  // 🔥 MOST IMPORTANT FIX
-  redirect: false,
-
-  handler: function (resp) {
-    console.log("Payment handler called:", resp);
-
-    alert(
-      "✅ Payment Successful 🎉\n\n" +
-      "Payment ID: " + resp.razorpay_payment_id + "\n\n" +
-      "Order processing me hai 🚚"
-    );
-
-    closeAll();
-
-    // ⏳ webhook ko time do
-    setTimeout(openOrderStatus, 2500);
-  },
-
-  modal: {
-    ondismiss: function () {
-      alert("❌ Payment cancelled by user");
-    }
-  }
-});
-
-    rzp.open();
-
-  } catch(err) {
-    console.error("PAY ERROR:", err);
-    alert("❌ Payment process failed");
-  }
+  rzp.open();
 }
 // ------------------- CART -------------------
 async function addToCart(p){
