--- a/retailer.html
+++ b/retailer.html
@@ -279,7 +279,9 @@ async function directBuy(e) {
       alert("📦 Order processing ho raha hai");
 
       closeAll();
-      openOrderStatus(); // 🔥 direct show order
+      setTimeout(() => {
+    openOrderStatus();
+  }, 3000); // 🔥 direct show order
     },
 
     modal: {
