--- a/wholesaler.html
+++ b/wholesaler.html
@@ -227,15 +227,26 @@ r.readAsDataURL(img);
 
 /* LOAD PRODUCTS */
 async function loadProducts(){
-const r=await fetch(API+"/api/products/wholesaler/"+WID);
-const d=await r.json();
-products.innerHTML=d.products.map(p=>`
+  const r = await fetch(API + "/api/products/wholesaler/" + WID);
+  const d = await r.json();
 
-  <div class="product-card">    
-    <img src="${p.image}">    
-    <h4>${p.productName}</h4>    
-    <div class="price">₹${p.price}</div>    
-  </div>`).join("");    
+  products.innerHTML = d.products.map(p => `
+    <div class="product-card">
+      <img src="${p.image}">
+      <h4>${p.productName}</h4>
+      <div class="price">₹${p.price}</div>
+
+      <div style="display:flex;gap:6px;justify-content:center;margin-top:6px">
+        <button class="success" onclick="openEditProduct('${p._id}')">
+          <i class="bi bi-pencil"></i>
+        </button>
+        <button class="success" style="background:#dc2626"
+          onclick="deleteProduct('${p._id}')">
+          <i class="bi bi-trash"></i>
+        </button>
+      </div>
+    </div>
+  `).join("");
 }    /* CONFIRM ORDER WITH VEHICLE TYPE */
 async function confirmOrder(id){
 const vehicle = prompt("Enter Vehicle Type: two_wheeler / three_wheeler / four_wheeler");
